[package]
name = "ecoinfra-governance"
version = "0.2.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
geojson = "0.24"
thiserror = "1"
bitflags = "2"
